tests/semantic/invalid/type_mismatch_return.src
fn should_return_int() -> int {
    return 3.14;
}
